--- a/users/templates/update.html
+++ b/users/templates/update.html
@@ -144,12 +144,27 @@
           {% endfor %}
         </select>
       </div>
+      <div class="col-md-6">
+        <label for="country" class="form-label">Country</label>
+        <select name="country" id="country" class="form-select" required>
+          <option value="" disabled selected>Select your country</option>
+          {% for code, country in countries %}
+            <option value="{{ code }}">{{ country }}</option>
+          {% endfor %}
+        </select>
+      </div>
 
       <div class="col-12 d-grid mt-4">
         <button type="submit" class="btn btn-primary">Update Account</button>
       </div>
-    </div>
   </form>
+  
+  <form method="POST" action="{% url 'home' %}">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-primary w-100 mt-2">Return to Store</button>
+  </form>
+  
+  
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
